[tool.poetry]
authors = ["Robert Kirberich"]
description = ""
name = "gerber_to_scad"
version = "0.1.3"

include = [
    { path = "gerber_to_scad", format = ["sdist", "wheel"] },
    { path = "gts_service", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"
pcb-tools = "^0.1.6"
scipy = "^1.15.0"
solidpython = "^1.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
pyright = "^1.1.392.post0"

[tool.poetry.group.service.dependencies]
Django = "^4.2"
django-bootstrap3 = "^23.1"
django-environ = "^0.10.0"
gunicorn = "^20.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.poetry.scripts]
g2s = "gerber_to_scad.cli:gerber_to_scad_cli"
service = "gts_service.__main__:main"
