[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "gerber_to_scad"
version = "0.1.3"

[tool.poetry.dependencies]
Django = "^4.2"
django-bootstrap3 = "^23.1"
django-environ = "^0.10.0"
gunicorn = "^20.1.0"
pcb-tools = "^0.1.6"
python = "^3.10,<3.11"
scipy = "^1.10.1"
typing-extensions = "^4.15.0"
pygerber = {extras = ["svg"], version = "^2.4.3"}

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[tool.poetry.scripts]
gerber_to_scad = "gerber_to_scad.cli:gerber_to_scad_cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
basedpyright = "^1.37.1"
django-stubs = "^5.2.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = 'none'
reportUnknownMemberType = 'none'
reportUnknownArgumentType = 'none'
