[tool.poetry]
authors = ["Rob Kirberich <rob@kirberich.uk>"]
description = "Solder stencil generator, converts gerber files to a 3d-printable openSCAD solder stencil"
readme = 'README.md'
name = "gerber_to_scad"
version = "0.1.4"

[tool.poetry.dependencies]
pcb-tools = "^0.1.6"
python = ">=3.10,<4"
scipy = "^1.10.1"
typing-extensions = "^4.15.0"
pygerber = {extras = ["svg"], version = "^2.4.3"}
solidpython = "^1.1.3"
setuptools = ">=67.0.0,<81"

[tool.poetry.extras]
service = ["Django", "django-bootstrap3", "django-environ", "gunicorn"]

[tool.poetry.dependencies.Django]
version = "^4.2"
optional = true

[tool.poetry.dependencies.django-bootstrap3]
version = "^23.1"
optional = true

[tool.poetry.dependencies.django-environ]
version = "^0.10.0"
optional = true

[tool.poetry.dependencies.gunicorn]
version = "^25.1.0"
optional = true

[tool.poetry.scripts]
gerber_to_scad = "gerber_to_scad.cli:gerber_to_scad_cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
basedpyright = "^1.37.1"
django-stubs = "^5.2.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = 'none'
reportUnknownMemberType = 'none'
reportUnknownArgumentType = 'none'
